# django_ts_pro

./: README.md  docker-compose.yml  manage.py  pyproject.toml
TS_django_app/: asgi.py  settings.py  urls.py  wsgi.py
