[tool.poetry]
name = "django_challenge_ts"
version = "0.1.0"
description = "Django simple application."
authors = ["JuniorCardoso <tarcisio.cardoso@olist.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.3"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
Django = "^3.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
